compilador/test_programs/invalid/08_return_type_mismatch.patito
programa return_mismatch;
vars:
    x: entero;

entero getNumber() {
    vars:
        y: flotante;
    y = 3.14;
    return y;
};

inicio {
    x = getNumber();
}
fin
